--- a/sass/base/_utility.scss
+++ b/sass/base/_utility.scss
@@ -16,3 +16,15 @@
 		background: rgba($block, .5);
 	}
 }
+
+.sr-only {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	padding: 0;
+	margin: -1px;
+	overflow: hidden;
+	clip: rect(0, 0, 0, 0);
+	white-space: nowrap; /* added line */
+	border: 0;
+  }
